se termino la configuracion de los modules controls se creó la función loadModuleControl en el router para cargar un control de módulo

--- a/layout.html
+++ b/layout.html
@@ -109,10 +109,10 @@
 
 
     <!-- ===== CONTENIDO DINÁMICO ===== -->
-    <main class="container-fluid">
+    <main class="container-fluid" style="padding-top: 70px">
       
     <!-- ===== COMPONENTES REUTILIZABLES (OCULTOS POR DEFECTO) ===== -->
-    <div id="moduleControls" class="px-2 d-non" style="padding-top: 70px">
+    <div id="modules-controls-container" class="px-2 d-none">
       <!-- Fila de filtros: Buscador + Botones Add -->
       <div
         id="container-searchInput-btnAdd"
@@ -188,7 +188,7 @@
       </div>
 
       <!-- Cards flotantes -->
-      <div id="floatingCards" class="floating-cards d-none">
+      <div id=ID_FLOATING_CARDS class="floating-cards d-none">
         <!-- Card: Agregar Producto -->
         <button
           class="card shadow-sm bg-light p-2 floating-card"
