--- a/layout2.html
+++ b/layout2.html
@@ -107,7 +107,7 @@
     </nav>
 
     <!-- ===== COMPONENTES REUTILIZABLES (OCULTOS POR DEFECTO) ===== -->
-    <div id="moduleControls" class="px-2 d-non" style="padding-top: 70px">
+    <div id="modules-components-container" class="px-2 d-non" style="padding-top: 70px">
       <!-- Fila de filtros: Buscador + Botones Add -->
       <div
         class="fila-1 d-flex align-items-center justify-content-between gap-2 mb-2"
