se eliminaron algunas funciones y se pasaron a los componentes de los controles correspondientes

--- a/layout.html
+++ b/layout.html
@@ -109,14 +109,14 @@
 
 
     <!-- ===== CONTENIDO DINÁMICO ===== -->
-    <main class="container-fluid" style="padding-top: 70px">
+    <main class="container-fluid" style="padding-top: 10px">
       
     <!-- ===== COMPONENTES REUTILIZABLES (OCULTOS POR DEFECTO) ===== -->
-    <div id="modules-controls-container" class="px-2 d-none">
+    <div id="modules-controls-container" class="px-2 d-non">
       <!-- Fila de filtros: Buscador + Botones Add -->
       <div
         id="container-searchInput-btnAdd"
-        class="fila-1 d-flex align-items-center justify-content-between gap-2 mb-2 d-none"
+        class="fila-1 d-flex align-items-center justify-content-between gap-2 mb-2 d-non"
       >
         <!-- Se inserta el componente search-input -->
         <!-- Se inserta el componente btn-add -->
@@ -125,7 +125,7 @@
       <!-- Fila de filtros: Fecha + Ordenamiento -->
       <div
         id="container-dateFilter-orderBy"
-        class="fila-2 d-flex gap-2 mb-2 d-none"
+        class="fila-2 d-flex gap-2 mb-2 d-non"
       >
         <!-- Se inserta el componente date-filter -->
         <!-- Se inserta el componente order-by -->
@@ -134,7 +134,7 @@
       <!-- Fila de filtros: Chips -->
       <div
         id="container-chipsFilter"
-        class="fila-3 d-flex align-items-center gap-2 mb-2 d-none"
+        class="fila-3 d-flex align-items-center gap-2 mb-2 d-non"
       >
         <!-- Se inserta el componente chips-filter -->
       </div>
@@ -142,7 +142,7 @@
       <!-- Fila de filtros: Contador + Botón limpiar filtros -->
       <div
         id="container-listCounter-btnClearFilters"
-        class="fila-4 d-flex align-items-center justify-content-between gap-2 mb-2 d-none"
+        class="fila-4 d-flex align-items-center justify-content-between gap-2 mb-2 d-non"
       >
         <!-- Se inserta el componente list-counter -->
         <!-- Se inserta el componente btn-clear-filters -->
