se terminó de definir el componente btn-add y se probó que funciona con la pagina de gastos

--- a/layout.html
+++ b/layout.html
@@ -109,10 +109,10 @@
 
 
     <!-- ===== CONTENIDO DINÁMICO ===== -->
-    <main class="container-fluid" style="padding-top: 10px">
+    <main class="container-fluid" style="padding-top: 70px">
       
     <!-- ===== COMPONENTES REUTILIZABLES (OCULTOS POR DEFECTO) ===== -->
-    <div id="modules-controls-container" class="px-2 d-non">
+    <div id="modules-controls-container" class="px-2 d-none">
       <!-- Fila de filtros: Buscador + Botones Add -->
       <div
         id="container-searchInput-btnAdd"
