Fix chip filter logic in navigateToProductsWithFilter function to use correct property for filter value. Update HTML ID for low stock card to critical stock for improved clarity.

--- a/pages/home.html
+++ b/pages/home.html
@@ -61,7 +61,7 @@
     <div class="col-6">
       <div
         class="rounded-4 bg-white shadow-sm border-0"
-        id="cardLowStock"
+        id="cardCriticalStock"
         style="cursor: pointer"
       >
         <div
