Refactor layout and styles: Adjusted main container margins for better spacing, updated floating cards styles for improved animation, and replaced small tags with divs for better semantic structure in settings page.

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -1,15 +1,15 @@
 <!-- Sección: Unidades de Medida -->
-<div class="mb-4" style="margin-top: 70px;">
+<div class="mb-4" style="margin-top: 70px">
   <div class="d-flex align-items-center gap-2">
     <i class="bi bi-beaker text-primary fs-5"></i>
     <h6 class="mb-0 fw-semibold">Unidades de Medida</h6>
   </div>
 
   <!-- Texto informativo -->
-  <small class="text-muted d-flex align-items-center gap-1 pb-3 px-3">
+  <div class="text-muted fs-small btn-chip mb-3">
     <i class="bi bi-info-circle"></i>
-    <span>Unidades utilizadas para medir las cantidades de los productos</span>
-  </small>
+    Unidades utilizadas para medir las cantidades de los productos
+  </div>
 
   <!-- Campo de texto + botón agregar -->
   <div class="d-flex gap-2 mb-3">
@@ -45,10 +45,10 @@
   </div>
 
   <!-- Texto informativo -->
-  <small class="text-muted d-flex align-items-center gap-1 pb-3 px-3">
-    <i class="bi bi-info-circle"></i>
-    <span>Conceptos utilizados para categorizar los gastos registrados</span>
-  </small>
+  <div class="text-muted fs-small btn-chip mb-3">
+    <i class="bi bi-info-circle"></i> 
+    Conceptos utilizados para categorizar los gastos registrados
+  </div>
 
   <!-- Campo de texto + botón agregar -->
   <div class="d-flex gap-2 mb-3">
@@ -84,10 +84,10 @@
   </div>
 
   <!-- Texto informativo -->
-  <small class="text-muted d-flex align-items-center gap-1 px-3 pb-3">
-    <i class="bi bi-info-circle"></i>
-    <span>Porcentaje utilizado para calcular el salario del vendedor</span>
-  </small>
+  <div class="text-muted fs-small btn-chip mb-3">
+    <i class="bi bi-info-circle"></i> 
+    Porcentaje utilizado para calcular el salario del vendedor
+  </div>
 
   <div class="d-flex gap-2">
     <div class="flex-grow-1 d-inline-flex flex-column">
