--- a/layout.html
+++ b/layout.html
@@ -106,59 +106,55 @@
       </div>
     </nav>
 
-
-
     <!-- ===== CONTENIDO DINÁMICO ===== -->
-    <main class="container-fluid" style="padding-top: 70px">
-      
-    <!-- ===== COMPONENTES REUTILIZABLES (OCULTOS POR DEFECTO) ===== -->
-    <div id="modules-controls-container" class="px-2 d-none">
-      <!-- Fila de filtros: Buscador + Botones Add -->
-      <div
-        id="container-searchInput-btnAdd"
-        class="fila-1 d-flex align-items-center justify-content-between gap-2 mb-2 d-non"
-      >
-        <!-- Se inserta el componente search-input -->
-        <!-- Se inserta el componente btn-add -->
-      </div>
+    <main class="container-fluid" style="margin-top: 65px; margin-bottom: 80px;">
+      <!-- ===== COMPONENTES REUTILIZABLES (OCULTOS POR DEFECTO) ===== -->
+      <div id="modules-controls-container" class="px-2 d-none">
+        <!-- Fila de filtros: Buscador + Botones Add -->
+        <div
+          id="container-searchInput-btnAdd"
+          class="fila-1 d-flex align-items-center justify-content-between gap-2 mb-2 d-non"
+        >
+          <!-- Se inserta el componente search-input -->
+          <!-- Se inserta el componente btn-add -->
+        </div>
 
-      <!-- Fila de filtros: Fecha + Ordenamiento -->
-      <div
-        id="container-dateFilter-orderBy"
-        class="fila-2 d-flex gap-2 mb-2 d-non"
-      >
-        <!-- Se inserta el componente date-filter -->
-        <!-- Se inserta el componente order-by -->
-      </div>
+        <!-- Fila de filtros: Fecha + Ordenamiento -->
+        <div
+          id="container-dateFilter-orderBy"
+          class="fila-2 d-flex gap-2 mb-2 d-non"
+        >
+          <!-- Se inserta el componente date-filter -->
+          <!-- Se inserta el componente order-by -->
+        </div>
 
-      <!-- Fila de filtros: Chips -->
-      <div
-        id="container-chipsFilter"
-        class="fila-3 d-flex align-items-center gap-2 mb-2 d-non"
-      >
-        <!-- Se inserta el componente chips-filter -->
-      </div>
+        <!-- Fila de filtros: Chips -->
+        <div
+          id="container-chipsFilter"
+          class="fila-3 d-flex align-items-center gap-2 mb-2 d-non"
+        >
+          <!-- Se inserta el componente chips-filter -->
+        </div>
 
-      <!-- Fila de filtros: Contador + Botón limpiar filtros -->
-      <div
-        id="container-listCounter-btnClearFilters"
-        class="fila-4 d-flex align-items-center justify-content-between gap-2 mb-2 d-non"
-      >
-        <!-- Se inserta el componente list-counter -->
-        <!-- Se inserta el componente btn-clear-filters -->
+        <!-- Fila de filtros: Contador + Botón limpiar filtros -->
+        <div
+          id="container-listCounter-btnClearFilters"
+          class="fila-4 d-flex align-items-center justify-content-between gap-2 mb-2 d-non"
+        >
+          <!-- Se inserta el componente list-counter -->
+          <!-- Se inserta el componente btn-clear-filters -->
+        </div>
       </div>
-    </div>
-    <!-- ===== FIN COMPONENTES REUTILIZABLES ===== -->
-
+      <!-- ===== FIN COMPONENTES REUTILIZABLES ===== -->
 
       <!-- AQUÍ SE INYECTAN LAS PÁGINAS -->
-       <div id="pages-container"></div>
-       <!-- ===== FIN PÁGINAS ===== -->
+      <div id="pages-container"></div>
+      <!-- ===== FIN PÁGINAS ===== -->
     </main>
 
     <!-- ===== NAVBAR INFERIOR (MÓVIL) ===== -->
-    <nav class="bg-light fixed-bottom border-top px-2">
-      <div class="d-flex align-items-center w-100">
+    <nav class="bg-light fixed-bottom border-top px-2 py-2">
+      <div class="d-flex align-items-end w-100">
         <!-- HOME -->
         <button
           class="btn btn-link btn-chip rounded-pill text-decoration-none bottom-nav-btn w-100"
@@ -169,13 +165,16 @@
         </button>
 
         <!-- BOTÓN ADICIONAR (con cards flotantes) -->
-        <button
-          class="btn btn-link btn-sm rounded-pill text-decoration-none bottom-nav-btn w-100"
-          id="navAdd"
-        >
-          <i class="bi bi-plus-circle-fill fs-1"></i><br />
-          <small>Adicionar</small>
-        </button>
+        <div class="w-100 d-flex justify-content-center">
+          <button
+            class="btn btn-link text-decoration-none rounded-circle bottom-nav-btn position-absolute start-50 translate-middle-x"
+            id="navAdd"
+            style="bottom: 20px;"
+          >
+            <i class="bi bi-plus-circle-fill text-primary" style="font-size: 40px;"></i>
+          </button>
+          <small class="text-primary btn-chip">Adicionar</small>
+        </div>
 
         <!-- CONTABILIDAD -->
         <button
@@ -188,7 +187,10 @@
       </div>
 
       <!-- Cards flotantes -->
-      <div id=ID_FLOATING_CARDS class="floating-cards d-none">
+      <div
+        id="floatingCards"
+        class="floating-cards d-flex flex-column gap-2 position-absolute bottom-100 start-0 end-0 mb-4 px-5 d-none"
+      >
         <!-- Card: Agregar Producto -->
         <button
           class="card shadow-sm bg-light p-2 floating-card"
