--- a/modules/accounting/accounting.html
+++ b/modules/accounting/accounting.html
@@ -1,55 +1,58 @@
 <div class="d-flex flex-column gap-2">
-  
   <!-- Filtro de fecha -->
-  <div class="d-inline-flex align-items-center gap-2 pt-3">
+  <!-- <div class="d-inline-flex align-items-center gap-2">
     <label class="form-label small">Fecha</label>
     <input
       type="date"
       id="accountingDateFilter"
       class="form-control form-control-sm rounded-pill"
     />
-  </div>
-
-  <!-- Alerta de productos sin inventario -->
-  <div id="alertMissingInventory" class="alert alert-warning d-none">
-    <i class="bi bi-exclamation-triangle"></i>
-    <strong>Faltan productos por hacerle el inventario</strong>
-    <button class="btn btn-chip btn-warning rounded-pill" onclick="goToInventory()">
-      Ir al Inventario
-      <i class="bi bi-chevron-right small"></i>
-    </button>
-  </div>
-
-  <!-- Alerta de gastos sin registrar -->
-  <div id="alertNoExpenses" class="alert alert-danger d-none">
-    <i class="bi bi-info-circle"></i>
-    <strong>No hay gastos registrados para el día de ayer</strong>
-    <button class="btn btn-chip btn-danger rounded-pill" onclick="goToExpenses()">
-      Ir a Gastos
-      <i class="bi bi-chevron-right small"></i>
-    </button>
-  </div>
+  </div> -->
 
   <!-- Sección: Contabilidad -->
   <div class="card shadow-sm">
     <div class="card-header bg-primary text-white">
-      <h6 class="mb-0">
-        <i class="bi bi-calculator"></i> Contabilidad
-      </h6>
+      <h6 class="mb-0"><i class="bi bi-calculator"></i> Contabilidad</h6>
     </div>
+
     <div class="card-body">
+      <!-- Alerta de productos sin inventario -->
+      <div id="alertMissingInventory" class="alert alert-warning d-none">
+        <i class="bi bi-exclamation-triangle"></i>
+        <strong>Faltan productos por hacerle el inventario</strong>
+        <button
+          class="btn btn-chip btn-warning rounded-pill"
+          onclick="goToInventory()"
+        >
+          Ir al Inventario
+          <i class="bi bi-chevron-right small"></i>
+        </button>
+      </div>
+
       <div id="accountingProductsList" class="d-grid gap-2">
         <!-- Productos se llenan dinámicamente -->
-         <!-- TEMPLATE: Card de producto -->
-         <template id="accountingProductCardTemplate">
+        <!-- TEMPLATE: Card de producto -->
+        <template id="accountingProductCardTemplate">
           <div class="card shadow-sm">
             <div class="card-body py-2 px-3">
-              <div class="fw-semibold mb-2" id="accounting-product-name">product name</div>
+              <div class="fw-semibold mb-2" id="accounting-product-name">
+                product name
+              </div>
               <div class="d-flex flex-wrap gap-2 small text-muted">
-                <span><i class="bi bi-box text-primary"></i> yesterday Stock</span>
-                <span><i class="bi bi-arrow-right-circle text-success"></i> yesterday Entries</span>
-                <span><i class="bi bi-arrow-left-circle text-danger"></i> yesterday Exits</span>
-                <span><i class="bi bi-box text-success"></i>today Inventory</span>
+                <span
+                  ><i class="bi bi-box text-primary"></i> yesterday Stock</span
+                >
+                <span
+                  ><i class="bi bi-arrow-right-circle text-success"></i>
+                  yesterday Entries</span
+                >
+                <span
+                  ><i class="bi bi-arrow-left-circle text-danger"></i> yesterday
+                  Exits</span
+                >
+                <span
+                  ><i class="bi bi-box text-success"></i>today Inventory</span
+                >
               </div>
               <div class="d-flex flex-wrap gap-2 small text-muted">
                 <span>VENTAS </span>
@@ -58,7 +61,7 @@
               </div>
             </div>
           </div>
-         </template>
+        </template>
       </div>
       <div class="mt-3">
         <button class="btn btn-primary w-100 rounded-pill" id="btnTotalAmount">
@@ -71,15 +74,27 @@
   <!-- Sección: Gastos -->
   <div class="card shadow-sm mb-">
     <div class="card-header bg-danger text-white">
-      <h6 class="mb-0">
-        <i class="bi bi-cash-coin"></i> Gastos
-      </h6>
+      <h6 class="mb-0"><i class="bi bi-cash-coin"></i> Gastos</h6>
     </div>
     <div class="card-body">
+      <!-- Alerta de gastos sin registrar -->
+      <div id="alertNoExpenses" class="alert alert-warning d-none">
+        <i class="bi bi-exclamation-triangle"></i>
+        <strong>No hay gastos registrados para el día de ayer</strong>
+        <button
+          class="btn btn-chip btn-warning rounded-pill"
+          onclick="goToExpenses()"
+        >
+          Ir a Gastos
+          <i class="bi bi-chevron-right small"></i>
+        </button>
+      </div>
+      <!-- Lista de gastos -->
       <div id="accountingExpensesList" class="d-grid gap-2">
         <!-- Gastos se llenan dinámicamente -->
       </div>
-      <div class="mt-3">
+      <!-- Botón total de gastos -->
+      <div class="mt-1">
         <button class="btn btn-danger w-100 rounded-pill" id="btnTotalExpenses">
           <i class="bi bi-cash-stack"></i> Total Gastos: $0.00
         </button>
@@ -90,31 +105,39 @@
   <!-- Sección: Ventas -->
   <div class="card shadow-sm mb-">
     <div class="card-header bg-success text-white">
-      <h6 class="mb-0">
-        <i class="bi bi-cart-check"></i> Ventas
-      </h6>
+      <h6 class="mb-0"><i class="bi bi-cart-check"></i> Ventas</h6>
     </div>
     <div class="card-body">
       <!-- Ventas en Efectivo -->
-      <div class="d-flex justify-content-between align-items-center mb-3 p-2 border rounded">
+      <div
+        class="d-flex justify-content-between align-items-center mb-3 p-2 border rounded"
+      >
         <div class="d-flex align-items-center gap-2">
           <i class="bi bi-cash text-success fs-5"></i>
           <span class="fw-semibold">Efectivo</span>
           <span class="text-success" id="cashSalesAmount">$0.00</span>
         </div>
-        <button class="btn btn-success btn-sm rounded-pill" id="btnAddCashSales">
+        <button
+          class="btn btn-success btn-sm rounded-pill"
+          id="btnAddCashSales"
+        >
           <i class="bi bi-plus"></i> Agregar
         </button>
       </div>
 
       <!-- Ventas por Transferencia -->
-      <div class="d-flex justify-content-between align-items-center mb-3 p-2 border rounded">
+      <div
+        class="d-flex justify-content-between align-items-center mb-3 p-2 border rounded"
+      >
         <div class="d-flex align-items-center gap-2">
           <i class="bi bi-credit-card text-success fs-5"></i>
-          <span class="fw-semibold">Transferencia</span>
+          <span class="fw-semibold">Transf.</span>
           <span class="text-success" id="transferSalesAmount">$0.00</span>
         </div>
-        <button class="btn btn-success btn-sm rounded-pill" id="btnAddTransferSales">
+        <button
+          class="btn btn-success btn-sm rounded-pill"
+          id="btnAddTransferSales"
+        >
           <i class="bi bi-plus"></i> Agregar
         </button>
       </div>
@@ -130,18 +153,20 @@
   <!-- Sección: Cierre de Caja -->
   <div class="card shadow-sm mb-">
     <div class="card-header bg-info text-white">
-      <h6 class="mb-0">
-        <i class="bi bi-calculator"></i> Cierre de Caja
-      </h6>
+      <h6 class="mb-0"><i class="bi bi-calculator"></i> Cierre de Caja</h6>
     </div>
     <div class="card-body">
       <div class="d-flex justify-content-between align-items-center mb-2">
         <span><i class="bi bi-calculator text-primary"></i> Importe Total</span>
-        <span class="text-primary fw-semibold" id="closingTotalAmount">$0.00</span>
+        <span class="text-primary fw-semibold" id="closingTotalAmount"
+          >$0.00</span
+        >
       </div>
       <div class="d-flex justify-content-between align-items-center mb-2">
         <span><i class="bi bi-calculator text-success"></i> Total Ventas</span>
-        <span class="text-success fw-semibold" id="closingTotalSales">$0.00</span>
+        <span class="text-success fw-semibold" id="closingTotalSales"
+          >$0.00</span
+        >
       </div>
       <div class="d-flex justify-content-between align-items-center">
         <span><i class="bi bi-dash-circle text-danger"></i> Diferencia</span>
@@ -153,9 +178,7 @@
   <!-- Sección: Cálculo de Salario -->
   <div class="card shadow-sm mb-">
     <div class="card-header bg-warning text-dark">
-      <h6 class="mb-0">
-        <i class="bi bi-wallet2"></i> Cálculo de Salario
-      </h6>
+      <h6 class="mb-0"><i class="bi bi-wallet2"></i> Cálculo de Salario</h6>
     </div>
     <div class="card-body">
       <div class="d-flex justify-content-between align-items-center mb-2">
@@ -179,10 +202,12 @@
 
   <!-- Botón Cerrar Contabilidad -->
   <div class="">
-    <button class="btn btn-primary w-100 rounded-pill" id="btnCloseAccounting" disabled>
+    <button
+      class="btn btn-primary w-100 rounded-pill"
+      id="btnCloseAccounting"
+      disabled
+    >
       <i class="bi bi-lock"></i> Cerrar Contabilidad
     </button>
   </div>
-
 </div>
-
