Refactor accounting module: Updated HTML structure for product cards, improved layout and styling for buttons, and enhanced date filter synchronization. Replaced console.error with console.warn for better logging in date-filter component. Introduced new async functions for rendering accounting data and improved template usage for product cards.

--- a/layout.html
+++ b/layout.html
@@ -139,7 +139,7 @@
         <!-- Fila de filtros: Contador + Botón limpiar filtros -->
         <div
           id="container-listCounter-btnClearFilters"
-          class="fila-4 d-flex align-items-center justify-content-between gap-2 mb-2 d-non"
+          class="fila-4 d-flex align-items-center justify-content-end  gap-2 mb-2 d-non"
         >
           <!-- Se inserta el componente list-counter -->
           <!-- Se inserta el componente btn-clear-filters -->
