--- a/modules/accounting/accounting.html
+++ b/modules/accounting/accounting.html
@@ -35,7 +35,7 @@
               <div class="fw-semibold mb-2 accounting-product-name">
                 product name
               </div>
-              <div class="d-flex flex-wrap gap-2 small text-muted">
+              <div class="d-flex flex-wrap gap-3 small text-muted">
                 <div>
                   <i class="bi bi-box-fill text-primary"></i>
                   <span class="accounting-product-yesterday-stock">--</span>
@@ -57,7 +57,7 @@
                   <span class="accounting-product-sales">--</span>
                 </div>
               </div>
-              <div class="d-flex flex-wrap gap-2 pt-2 small text-muted fw-semibold">
+              <div class="d-flex flex-wrap gap-3 pt-2 small text-muted fw-semibold">
                 <div>
                   <i class="bi bi-coin text-primary"></i>
                   PU
@@ -87,6 +87,7 @@
       <h6 class="mb-0"><i class="bi bi-cash-coin"></i> Gastos</h6>
     </div>
     <div class="card-body">
+
       <!-- Alerta de gastos sin registrar -->
       <div id="alertNoExpenses" class="alert alert-warning d-none">
         <i class="bi bi-exclamation-triangle"></i>
@@ -96,12 +97,29 @@
           <i class="bi bi-chevron-right small"></i>
         </button>
       </div>
+
       <!-- Lista de gastos -->
       <div id="accountingExpensesList" class="d-grid gap-2">
         <!-- Gastos se llenan dinámicamente -->
+
+        <!-- TEMPLATE: Card de gasto -->
+        <template id="accountingExpenseCardTemplate">
+          <div class="card shadow-sm">
+            <div class="card-body py-2 px-3">
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center gap-2">
+                  <i class="bi bi-cash-coin text-danger"></i>
+                  <span class="fw-semibold accounting-expense-concept">expense concept</span>
+                </div>
+                <span class="text-danger fw-semibold accounting-expense-amount">-$0.00</span>
+              </div>
+            </div>
+          </div>
+        </template>
+
       </div>
       <!-- Botón total de gastos -->
-      <div class="mt-1">
+      <div class="mt-3">
         <button class="btn btn-danger w-100 rounded-pill" id="btnTotalExpenses">
           <i class="bi bi-cash-stack"></i> Total Gastos: $0.00
         </button>
