Refactor filter synchronization: Updated linkDateAndChipsFilters function to be asynchronous, ensuring proper handling of filter updates in btn-clear-filters, chips-filter, and date-filter components. Enhanced button HTML structure for better accessibility and clarity in the accounting module.

--- a/modules/accounting/accounting.html
+++ b/modules/accounting/accounting.html
@@ -74,8 +74,9 @@
         </template>
       </div>
       <div class="mt-3">
-        <button class="btn btn-primary w-100 rounded-pill" id="btnTotalAmount">
-          <i class="bi bi-cash-stack"></i> Importe Total: $0.00
+        <button class="btn btn-primary w-100 rounded-pill" >
+          <i class="bi bi-cash-stack"></i> 
+          <span id="btnTotalAmount">Importe Total: $0.00</span>
         </button>
       </div>
     </div>
@@ -120,8 +121,9 @@
       </div>
       <!-- Botón total de gastos -->
       <div class="mt-3">
-        <button class="btn btn-danger w-100 rounded-pill" id="btnTotalExpenses">
-          <i class="bi bi-cash-stack"></i> Total Gastos: $0.00
+        <button class="btn btn-danger w-100 rounded-pill">
+          <i class="bi bi-cash-stack"></i> 
+          <span id="btnTotalExpenses">Total Gastos: $0.00</span>
         </button>
       </div>
     </div>
@@ -158,8 +160,9 @@
       </div>
 
       <div class="mt-3">
-        <button class="btn btn-success w-100 rounded-pill" id="btnTotalSales">
-          <i class="bi bi-cash-stack"></i> Total Ventas: $0.00
+        <button class="btn btn-success w-100 rounded-pill">
+          <i class="bi bi-cash-stack"></i> 
+          <span id="btnTotalSales">Total Ventas: $0.00</span>
         </button>
       </div>
     </div>
