--- a/modules/accounting/modals/transfer-sales-modal.html
+++ b/modules/accounting/modals/transfer-sales-modal.html
@@ -23,6 +23,9 @@
           min="0"
           step="0.01"
         />
+        <div class="invalid-feedback">
+          Ingresá una cantidad válida
+        </div>
       </div>
       <div class="modal-footer">
         <button
