Remove quantity input handling from product modal: Commented out quantity field in the product modal and adjusted related JavaScript logic to default quantity to zero, improving clarity and preventing potential errors in product management.

--- a/modules/products/modals/products-modal.html
+++ b/modules/products/modals/products-modal.html
@@ -48,7 +48,7 @@
             </div>
           </div>
 
-          <div class="mb-2">
+          <!-- <div class="mb-2">
             <label class="form-label">Cantidad</label>
             <input
               type="number"
@@ -56,7 +56,7 @@
               id="inputQuantity"
               min="0"
             />
-          </div>
+          </div> -->
 
           <div class="mb-2">
             <label class="form-label">Umbral de stock bajo</label>
