--- a/modules/accounting/accounting.html
+++ b/modules/accounting/accounting.html
@@ -26,56 +26,57 @@
         </button>
       </div>
 
-      <div id="accountingProductsList" class="d-grid gap-2">
-        <!-- Productos se llenan dinámicamente -->
-        <!-- TEMPLATE: Card de producto -->
-        <template id="accountingProductCardTemplate">
-          <div class="card shadow-sm">
-            <div class="card-body py-2 px-3">
-              <div class="fw-semibold mb-2 accounting-product-name">
-                product name
+      <!-- TEMPLATE: Card de producto -->
+      <template id="accountingProductCardTemplate">
+        <div class="card shadow-sm">
+          <div class="card-body py-2 px-3">
+            <div class="fw-semibold mb-2 accounting-product-name">
+              product name
+            </div>
+            <div class="d-flex flex-wrap gap-3 small text-muted">
+              <div>
+                <i class="bi bi-box-fill text-primary"></i>
+                <span class="accounting-product-yesterday-stock">--</span>
               </div>
-              <div class="d-flex flex-wrap gap-3 small text-muted">
-                <div>
-                  <i class="bi bi-box-fill text-primary"></i>
-                  <span class="accounting-product-yesterday-stock">--</span>
-                </div>
-                <div>
-                  <i class="bi bi-arrow-right-circle-fill text-success"></i>
-                  <span class="accounting-product-yesterday-entries">--</span>
-                </div>
-                <div>
-                  <i class="bi bi-arrow-left-circle-fill text-danger"></i>
-                  <span class="accounting-product-yesterday-exits">--</span>
-                </div>
-                <div>
-                  <i class="bi bi-box-fill text-success"></i>
-                  <span class="accounting-product-today-inventory">--</span>
-                </div>
-                <div>
-                  <i class="bi bi-cart-check-fill text-success"></i>
-                  <span class="accounting-product-sales">--</span>
-                </div>
+              <div>
+                <i class="bi bi-arrow-right-circle-fill text-success"></i>
+                <span class="accounting-product-yesterday-entries">--</span>
               </div>
-              <div class="d-flex flex-wrap gap-3 pt-2 small text-muted fw-semibold">
-                <div>
-                  <i class="bi bi-coin text-primary"></i>
-                  PU
-                  <span class="accounting-product-unit-price"> $0.00</span>
-                </div>
-                <div>
-                  <i class="bi bi-cash text-primary"></i>
-                  IMP
-                  <span class="accounting-product-total-amount"> $0.00</span>
-                </div>
+              <div>
+                <i class="bi bi-arrow-left-circle-fill text-danger"></i>
+                <span class="accounting-product-yesterday-exits">--</span>
+              </div>
+              <div>
+                <i class="bi bi-box-fill text-success"></i>
+                <span class="accounting-product-today-inventory">--</span>
+              </div>
+              <div>
+                <i class="bi bi-cart-check-fill text-success"></i>
+                <span class="accounting-product-sales">--</span>
+              </div>
+            </div>
+            <div class="d-flex flex-wrap gap-3 pt-2 small text-muted fw-semibold">
+              <div>
+                <i class="bi bi-coin text-primary"></i>
+                PU
+                <span class="accounting-product-unit-price"> $0.00</span>
+              </div>
+              <div>
+                <i class="bi bi-cash text-primary"></i>
+                IMP
+                <span class="accounting-product-total-amount"> $0.00</span>
               </div>
             </div>
           </div>
-        </template>
+        </div>
+      </template>
+      <!-- Lista de productos -->
+      <div id="accountingProductsList" class="d-grid gap-2">
+        <!-- Productos se llenan dinámicamente -->
       </div>
       <div class="mt-3">
-        <button class="btn btn-primary w-100 rounded-pill" >
-          <i class="bi bi-cash-stack"></i> 
+        <button class="btn btn-primary w-100 rounded-pill">
+          <i class="bi bi-cash-stack"></i>
           <span id="btnTotalAmount">Importe Total: $0.00</span>
         </button>
       </div>
@@ -99,30 +100,31 @@
         </button>
       </div>
 
+
+      <!-- TEMPLATE: Card de gasto -->
+      <template id="accountingExpenseCardTemplate">
+        <div class="card shadow-sm">
+          <div class="card-body py-2 px-3">
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="d-flex align-items-center gap-2">
+                <i class="bi bi-cash-coin text-danger"></i>
+                <span class="fw-semibold accounting-expense-concept">expense concept</span>
+              </div>
+              <span class="text-danger fw-semibold accounting-expense-amount">-$0.00</span>
+            </div>
+          </div>
+        </div>
+      </template>
+
       <!-- Lista de gastos -->
       <div id="accountingExpensesList" class="d-grid gap-2">
         <!-- Gastos se llenan dinámicamente -->
-
-        <!-- TEMPLATE: Card de gasto -->
-        <template id="accountingExpenseCardTemplate">
-          <div class="card shadow-sm">
-            <div class="card-body py-2 px-3">
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="d-flex align-items-center gap-2">
-                  <i class="bi bi-cash-coin text-danger"></i>
-                  <span class="fw-semibold accounting-expense-concept">expense concept</span>
-                </div>
-                <span class="text-danger fw-semibold accounting-expense-amount">-$0.00</span>
-              </div>
-            </div>
-          </div>
-        </template>
-
       </div>
+      
       <!-- Botón total de gastos -->
       <div class="mt-3">
         <button class="btn btn-danger w-100 rounded-pill">
-          <i class="bi bi-cash-stack"></i> 
+          <i class="bi bi-cash-stack"></i>
           <span id="btnTotalExpenses">Total Gastos: $0.00</span>
         </button>
       </div>
@@ -161,7 +163,7 @@
 
       <div class="mt-3">
         <button class="btn btn-success w-100 rounded-pill">
-          <i class="bi bi-cash-stack"></i> 
+          <i class="bi bi-cash-stack"></i>
           <span id="btnTotalSales">Total Ventas: $0.00</span>
         </button>
       </div>
