--- a/modules/accounting/accounting.html
+++ b/modules/accounting/accounting.html
@@ -30,8 +30,12 @@
       <template id="accountingProductCardTemplate">
         <div class="card shadow-sm">
           <div class="card-body py-2 px-3">
-            <div class="fw-semibold mb-2 accounting-product-name">
-              product name
+
+            <div class="mb-2">
+              <i class="bi bi-exclamation-triangle text-warning me-2 missing-inventory-warning"></i>
+              <span class="fw-semibold accounting-product-name">
+                product name
+              </span>
             </div>
             <div class="d-flex flex-wrap gap-3 small text-muted">
               <div>
@@ -120,7 +124,7 @@
       <div id="accountingExpensesList" class="d-grid gap-2">
         <!-- Gastos se llenan dinámicamente -->
       </div>
-      
+
       <!-- Botón total de gastos -->
       <div class="mt-3">
         <button class="btn btn-danger w-100 rounded-pill">
