--- a/modules/accounting/accounting.html
+++ b/modules/accounting/accounting.html
@@ -226,4 +226,11 @@
       <i class="bi bi-lock"></i> Cerrar Contabilidad
     </button>
   </div>
+
+  <!-- Botón Reabrir Contabilidad -->
+  <div class="">
+    <button class="btn btn-primary w-100 rounded-pill" id="btnReopenAccounting">
+      <i class="bi bi-unlock"></i> Reabrir Contabilidad
+    </button>
+  </div>
 </div>
