Add confirm-action modal functionality: Introduced a new modal for confirming various actions, including reopening and closing accounting. Updated relevant JavaScript functions to utilize the new modal for user confirmations, enhancing user experience and interaction within the accounting module.

--- a/layout2.html
+++ b/layout2.html
@@ -369,6 +369,7 @@
     <!-- Componentes JS -->
     <script src="components/snackbar/undo.js"></script>
     <script src="components/confirm-delete/confirm-delete.js"></script>
+    <script src="components/confirm-action/confirm-action.js"></script>
 
     <!-- Módulos JS -->
     <script src="modules/products/products.js"></script>
