--- a/modules/accounting/accounting.html
+++ b/modules/accounting/accounting.html
@@ -222,7 +222,7 @@
 
   <!-- Botón Cerrar Contabilidad -->
   <div class="">
-    <button class="btn btn-primary w-100 rounded-pill" id="btnCloseAccounting" disabled>
+    <button class="btn btn-danger w-100 rounded-pill" id="btnCloseAccounting" disabled>
       <i class="bi bi-lock"></i> Cerrar Contabilidad
     </button>
   </div>
