--- a/layout.html
+++ b/layout.html
@@ -299,6 +299,7 @@
     <script src="components/snackbar/undo.js"></script>
     <script src="components/confirm-delete/confirm-delete.js"></script>
     <script src="components/confirm-action/confirm-action.js"></script>
+    <script src="components/toast/toast.js"></script>
 
     <!-- Módulos JS -->
     <script src="modules/products/products.js"></script>
