Add empty-state component for improved user feedback: Integrated the empty-state component across various modules to provide clearer placeholders for empty lists in expenses, movements, products, and inventory. This enhances user experience by offering informative messages when no data is available.

--- a/layout.html
+++ b/layout.html
@@ -300,6 +300,7 @@
     <script src="components/confirm-delete/confirm-delete.js"></script>
     <script src="components/confirm-action/confirm-action.js"></script>
     <script src="components/toast/toast.js"></script>
+    <script src="components/empty-state/empty-state.js"></script>
 
     <!-- Módulos JS -->
     <script src="modules/products/products.js"></script>
