Refactor date navigation functions for improved clarity: Updated the date navigation function to be more generic, allowing navigation to any specified page with a date filter. Adjusted related button implementations in the accounting module to utilize this new function, enhancing code organization and maintainability.

--- a/modules/accounting/accounting.html
+++ b/modules/accounting/accounting.html
@@ -20,7 +20,7 @@
       <div id="alertMissingInventory" class="alert alert-warning d-none">
         <i class="bi bi-exclamation-triangle"></i>
         <strong>Faltan productos por hacerle el inventario</strong>
-        <button class="btn btn-chip btn-warning rounded-pill" onclick="goToInventory()">
+        <button id="btnGoToInventory" class="btn btn-chip btn-warning rounded-pill">
           Ir al Inventario
           <i class="bi bi-chevron-right small"></i>
         </button>
@@ -98,7 +98,7 @@
       <div id="alertNoExpenses" class="alert alert-warning d-none">
         <i class="bi bi-exclamation-triangle"></i>
         <strong>No hay gastos registrados para el día de ayer</strong>
-        <button class="btn btn-chip btn-warning rounded-pill" onclick="goToExpenses()">
+        <button id="btnGoToExpenses" class="btn btn-chip btn-warning rounded-pill">
           Ir a Gastos
           <i class="bi bi-chevron-right small"></i>
         </button>
