--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   required />
               </div>
 
-              <button type="submit" class="btn btn-primary w-100">
+              <button type="submit" class="btn btn-primary rounded-pill w-100">
                 <i class="bi bi-box-arrow-in-right"></i>
                 Entrar
               </button>
