Add modal header configuration and script inclusion: Introduced modal header setup for various modals across the application, enhancing consistency in modal displays. Added modal-helpers.js script to layout files for improved modal management.

--- a/modules/accounting/modals/cash-sales-modal.html
+++ b/modules/accounting/modals/cash-sales-modal.html
@@ -3,8 +3,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title d-flex align-items-center gap-2">
-          <i class="bi bi-cash text-success"></i>
-          <span>Ventas en efectivo</span>
+          <i id="cashSalesModalIcon" class="bi bi-cash text-success"></i>
+          <span id="cashSalesModalTitle">Ventas en efectivo</span>
         </h5>
         <button
           type="button"
