--- a/modules/accounting/modals/transfer-sales-modal.html
+++ b/modules/accounting/modals/transfer-sales-modal.html
@@ -3,8 +3,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title d-flex align-items-center gap-2">
-          <i class="bi bi-credit-card text-success"></i>
-          <span>Ventas por transferencia</span>
+          <i id="transferSalesModalIcon" class="bi bi-credit-card text-success"></i>
+          <span id="transferSalesModalTitle">Ventas por transferencia</span>
         </h5>
         <button
           type="button"
