--- a/modules/inventory/modals/inventory-modal.html
+++ b/modules/inventory/modals/inventory-modal.html
@@ -4,7 +4,7 @@
       <!-- Header -->
       <div class="modal-header">
         <h5 class="modal-title d-flex align-items-center gap-2">
-          <i class="bi bi-clipboard-check text-primary"></i>
+          <i id="inventoryIcon" class="bi bi-clipboard-plus text-primary"></i>
           <span id="inventoryTitle">Conteo de inventario</span>
         </h5>
         <button
