--- a/layout.html
+++ b/layout.html
@@ -279,6 +279,7 @@
     <script src="js/configs.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/storage.js"></script>
+    <script src="js/modal-helpers.js"></script>
     <script src="js/router.js"></script>
     <script src="components/search-input/search-input.js"></script>
     <script src="components/btn-add/btn-add.js"></script>
