--- a/layout2.html
+++ b/layout2.html
@@ -358,6 +358,7 @@
     <script src="js/auth.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/modal-helpers.js"></script>
+    <script src="js/form-helpers.js"></script>
     <script src="js/router1.js"></script>
     <script src="js/modules-controls.js"></script>
     <script src="js/modules-modals.js"></script>
