--- a/modules/accounting/modals/cash-sales-modal.html
+++ b/modules/accounting/modals/cash-sales-modal.html
@@ -13,20 +13,24 @@
           aria-label="Cerrar"
         ></button>
       </div>
+
       <div class="modal-body">
-        <label class="form-label">Cantidad</label>
+        <form id="cashSalesForm"></form>
+        <label for="cashSalesInput" class="form-label">Cantidad</label>
         <input
           type="number"
           id="cashSalesInput"
-          class="form-control"
+          class="form-control form-control-sm"
           placeholder="0.00"
           min="0"
-          step="0.01"
+          step="0.05"
         />
-        <div class="invalid-feedback" id="cashSalesInput-invalid-feedback">
+        <div class="invalid-feedback" >
           Ingresá una cantidad válida
         </div>
+        </form>
       </div>
+
       <div class="modal-footer">
         <button
           type="button"
