--- a/modules/accounting/modals/transfer-sales-modal.html
+++ b/modules/accounting/modals/transfer-sales-modal.html
@@ -6,44 +6,28 @@
           <i id="transferSalesModalIcon" class="bi bi-credit-card text-success"></i>
           <span id="transferSalesModalTitle">Ventas por transferencia</span>
         </h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Cerrar"
-        ></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
+
       <div class="modal-body">
-        <label class="form-label">Cantidad</label>
-        <input
-          type="number"
-          id="transferSalesInput"
-          class="form-control"
-          placeholder="0.00"
-          min="0"
-          step="0.01"
-        />
-        <div class="invalid-feedback">
-          Ingresá una cantidad válida
-        </div>
+        <form id="transferSalesForm">
+          <label for="transferSalesInput" class="form-label">Cantidad</label>
+          <input type="number" id="transferSalesInput" class="form-control form-control-sm" placeholder="0.00" min="0"
+            step="0.05" />
+          <div class="invalid-feedback">
+            Ingresá una cantidad válida
+          </div>
+        </form>
       </div>
+
       <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-secondary rounded-pill btn-sm"
-          data-bs-dismiss="modal"
-        >
+        <button type="button" class="btn btn-secondary rounded-pill btn-sm" data-bs-dismiss="modal">
           Cancelar
         </button>
-        <button
-          type="button"
-          class="btn btn-success rounded-pill btn-sm"
-          onclick="saveTransferSales()"
-        >
+        <button type="button" class="btn btn-success rounded-pill btn-sm" onclick="saveTransferSales()">
           Guardar
         </button>
       </div>
     </div>
   </div>
 </div>
-
