--- a/modules/inventory/modals/inventory-modal.html
+++ b/modules/inventory/modals/inventory-modal.html
@@ -36,25 +36,25 @@
           <div class="d-flex gap-4 mb-2">
             <!-- Cantidad en almacén -->
             <div class="flex-grow-1">
-              <label class="form-label small">Almacén</label>
+              <label for="locationWarehouseInput" class="form-label small">Almacén</label>
               <div class="input-group input-group-sm rounded-pill overflow-hidden border">
                 <span class="input-group-text bg-primary text-white border-0 px-4">
                   <i class="bi bi-houses"></i>
                 </span>
                 <input
-                  type="number"
-                  id="locationWarehouseInput"
-                  class="form-control border-0 rounded-0"
-                  placeholder="Cantidad..."
-                  min="0"
-                  step="0.01"
+                type="number"
+                id="locationWarehouseInput"
+                class="form-control border-0 rounded-0"
+                placeholder="Cantidad..."
+                min="0"
+                step="0.01"
                 />
               </div>
             </div>
 
             <!-- Cantidad en área de ventas -->
             <div class="flex-grow-1">
-              <label class="form-label small">Área de ventas</label>
+              <label for="locationStoreInput" class="form-label small">Área de ventas</label>
               <div class="input-group input-group-sm rounded-pill overflow-hidden border">
                 <span class="input-group-text bg-success text-white border-0 px-4">
                   <i class="bi bi-shop-window"></i>
@@ -68,10 +68,14 @@
                   step="0.01"
                 />
               </div>
+              <div class="invalid-feedback" id="inventoryErrorFeedback">
+                La cantidad no puede ser negativa
+                <!-- Mensaje de error se setea por JS -->
+              </div>
             </div>
           </div>
           <!-- Mensaje de error compartido -->
-          <div class="invalid-feedback" id="inventoryErrorFeedback" style="display: none;">
+          <div class="invalid-feedback" id="inventoryErrorFeedback">
             <!-- Mensaje de error se setea por JS -->
           </div>
         </div>
