--- a/layout2.html
+++ b/layout2.html
@@ -6,8 +6,15 @@
     <!-- Mobile first -->
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+      content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover"
     />
+
+    <!-- PWA: pantalla completa y tema -->
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#0d6efd" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Contable" />
 
     <title>App Contable</title>
 
